# kksolver

./: CMakeLists.txt  README.md  main.c  main.cpp
kenken/: CMakeLists.txt  block.c  block.cpp  kenken.c  kenken.cpp  vector.c
kenken/include/: block.h  block.hpp  kenken.h  kenken.hpp  vector.h
